Front-end routing delayed for now.

--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -50,8 +50,8 @@
 
 	</head>
 	<body data-ng-controller = "UsersController as user" data-ng-init="user.createDummyUser()">
-		<li><a href="#/index"> Index </a></li>
-		<div ng-view></div>
+		<li><a href="#"> Index </a></li>
+		<div ng-view=""></div>
 
 		Hello there.
 		<br>
