--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-	<nav class="navbar navbar-default" role="navigation">
+<div class="container-fluid" style="margin-top:-.2%">
+	<nav class="navbar navbar-default" role="navigation" style="width:110%; margin-left:-2%">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -26,7 +26,7 @@
 		        	</div>
 		        	<button type="submit" class="btn btn-default">Search</button>
 		     	</form>
-		     	<ul class="nav navbar-nav navbar-right">
+		     	<ul class="nav navbar-nav navbar-right" style="margin-right:4%">
 		     		<li class="dropdown">
 			         	<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: white;">Dropdown <span class="caret"></span></a>
 			          	<ul class="dropdown-menu" role="menu">
