--- a/app/assets/templates/users-tests.html.erb
+++ b/app/assets/templates/users-tests.html.erb
@@ -1,7 +1,8 @@
 <div data-ng-controller="UserTestController as tester" data-ng-init="tester.runTests()">
-	<div data-ng-repeat="message in tester.messages">
+	<div data-ng-repeat="message in tester.messages" class="testStatus" message="{{message}}">
 		{{message}}
 	</div>
+	<br>
 	Tests Passed: {{tester.passedTests}}
 	<br>
 	Total Tests: {{tester.totalTests}}
