--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,15 +1,19 @@
+
+
 body {
   background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  color: teal;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
   line-height: 18px;
+  font-weight: bold;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  font-weight: bold;
 }
 
 pre {
