--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -13,8 +13,9 @@
 		Template: {{template}}
 
 		<button data-ng-click="template=99">Run User Tests</button>
-
+		<div id="fa">
 		<users-form data-ng-show="template==5"></users-form>
+		</div>
 		<users-tests data-ng-if="template==99"></users-tests>
 
 	</body>
