--- a/app/assets/templates/users-tests.html.erb
+++ b/app/assets/templates/users-tests.html.erb
@@ -1,4 +1,4 @@
-<div data-ng-controller="UserTestController as tester" data-ng-init="tester.runTests()">
+<div data-ng-controller="UserTestController as tester" class="test" data-ng-init="tester.runTests()">
 	<div data-ng-repeat="message in tester.messages" class="testStatus" message="{{message}}">
 		{{message}}
 	</div>
