--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -14,7 +14,7 @@
 			Template: {{template}}
 		
 
-		<button data-ng-click="template=99">Run User Tests</button>
+		<button data-ng-click="template=99">Run Unit Tests</button>
 		<%end%>
 		<users-form data-ng-show="template==5"></users-form>
 		<users-tests data-ng-if="template==99"></users-tests>
