Front-end logins ready to be implemented.

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -27,7 +27,7 @@ body{
 	border-radius: 25px;
 	background: url(http://i.imgur.com/VJeDMMe.jpg) no-repeat fixed;
 	margin-left: 27%;
-	height:300px;
+	/*height:300px;*/
 	width: 500px;
 	padding:30px;
 }
