--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -38,6 +38,7 @@
 				            <li class="divider"></li>
 				            <li><a href="#">Log out</a></li>
 			        	</ul>
+			        	<li><a href="#login-form" data-ng-click="template=6" style="color: white">Log in</a></li>
 			        	<li><a href="#user-form" data-ng-click="template=5" style="color: white">Sign up now!</a></li>
 			    </ul>
 		    </div><!-- /.navbar-collapse -->
