--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -14,9 +14,11 @@
 			Template: {{template}}
 		
 
-		<button data-ng-click="template=99">Run Unit Tests</button>
+		<button data-ng-click="template=99" style="background-color:teal">Run Unit Tests</button>
 		<%end%>
 		<users-form data-ng-show="template==5"></users-form>
+		<login-form data-ng-show="template==6"></login-form>
+
 		<users-tests data-ng-if="template==99"></users-tests>
 
 	</body>
