--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top:-.2%">
+<div class="container-fluid" id="over" style="margin-top:-.2%; position:fixed; width:100%">
 	<nav class="navbar navbar-default" role="navigation" style="width:110%; margin-left:-2%">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
