--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -41,7 +41,6 @@ body{
 }
 
 .profile-pic {
-	opacity: 0.9;
 	box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
 	border-radius: 25px;
 	/*background: url(http://i.imgur.com/VJeDMMe.jpg) no-repeat fixed;*/
@@ -57,7 +56,7 @@ body{
 	opacity: 0.9;
 	box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
 	border-radius: 25px;
-	/*background: url(http://i.imgur.com/VJeDMMe.jpg) no-repeat fixed;*/
+	background: url(http://i.imgur.com/VJeDMMe.jpg) no-repeat fixed;
 	float: right;
 	word-wrap: break-word;
 	/*margin-left: 27%;*/
