--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -20,7 +20,9 @@
 
 			<users-form data-ng-show="template==5"></users-form>
 			<login-form data-ng-show="template==6"></login-form>
-			<profile data-ng-show="template==7"></profile>
+			<div data-ng-controller = "UsersController as testUser" data-ng-init="testUser.createDummyUser()">
+				<profile data-ng-show="template==7" username="{{testUser.username}}" real-name="{{testUser.realName}}" available-hours="{{testUser.availableHours}}" current-city="{{testUser.currentCity}}" recipient="Felicia Day" description="{{testUser.description}}"></profile>
+			</div>
 			<users-tests data-ng-if="template==99"></users-tests>
 		</div>
 
