Some tidying up.

--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -4,12 +4,12 @@
 		{{username}}
 	</span>
 	<span class="profile-info">
-		Real name: {{realName}}
+		<span class="tag">Real name: </span>{{realName}}
 		<br>
-		Best timeframe: {{availableHours}}
+		<span class="tag">Best timeframe: </span>{{availableHours}}
 		<br>
-		Current city: {{currentCity}}
+		<span class="tag">Current city: </span>{{currentCity}}
 		<br>
-		About me: {{description}}
+		<span class="tag">About me: </span>{{description}}
 	</span>
 </div>
