--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -29,6 +29,10 @@ body{
   font-weight: bold;
 }
 
+.tag {
+	color: blue;
+}
+
 .form{
 	opacity: 0.9;
 	box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
