Frontend gift controller now exists.

--- a/app/assets/templates/gift.html.erb
+++ b/app/assets/templates/gift.html.erb
@@ -6,13 +6,13 @@
 		</div>
 	</span>
 	<span class="profile-info">
-		<span class="tag">Giver: </span>{{realName}}
+		<span class="tag">Giver: </span>{{giver}}
 		<br>
-		<span class="tag">Recipient: </span>{{availableHours}}
+		<span class="tag">Recipient: </span>{{recipient}}
 		<br>
-		<span class="tag">Rating: </span>{{description}}
+		<span class="tag">Rating: </span>{{rating}}/5
 		<br>
-		<span class="tag">Description: </span>{{currentCity}}
+		<span class="tag">Description: </span>{{description}}
 		<br>
 	</span>
 </div>
