--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -24,8 +24,8 @@
 			<div data-ng-controller = "UsersController as testUser" data-ng-init="testUser.createDummyUser()">
 				<profile data-ng-show="template==7" username="{{testUser.username}}" real-name="{{testUser.realName}}" available-hours="{{testUser.availableHours}}" current-city="{{testUser.currentCity}}" recipient="Felicia Day" description="{{testUser.description}}"></profile>
 			</div>
-			<div>
-				<gift data-ng-show="template ==8" name="SMT x FE"></gift>
+			<div data-ng-controller="GiftsController as testGift" data-ng-init="testGift.createDummyGift()">
+				<gift data-ng-show="template ==8" name="{{testGift.name}}" giver="{{testGift.giver}}" recipient="{{testGift.recipient}}" rating="{{testGift.rating}}" description="{{testGift.description}}"></gift>
 			</div>
 			<users-tests data-ng-if="template==99"></users-tests>
 		</div>
