--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -17,10 +17,12 @@
 				<button data-ng-click="template=99" style="background-color:teal">Run Unit Tests</button>
 				<button data-ng-click="template=7" style="background-color:teal">Show Sample Profile</button>
 				<button data-ng-click="template=8" style="background-color:teal">Show Sample Gift</button>
+				<button data-ng-click="template=9" style="background-color:teal">Show Gift Form</button>
 			<%end%>
 
 			<users-form data-ng-show="template==5"></users-form>
 			<login-form data-ng-show="template==6"></login-form>
+			<gift-form data-ng-show="template==9"></gift-form>
 			<div data-ng-controller = "UsersController as testUser" data-ng-init="testUser.createDummyUser()">
 				<profile data-ng-show="template==7" username="{{testUser.username}}" real-name="{{testUser.realName}}" available-hours="{{testUser.availableHours}}" current-city="{{testUser.currentCity}}" recipient="Felicia Day" description="{{testUser.description}}"></profile>
 			</div>
