Minor fixes/setup

--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -3,6 +3,8 @@
 	<head>
 	
 	<%= javascript_include_tag "front"%>
+	<%= javascript_include_tag "spec/users-spec"%>
+	<%= javascript_include_tag "spec/gifts-spec"%>
 
 		<title> Generosity </title>
 
