--- a/app/views/tracker/hunt.html.erb
+++ b/app/views/tracker/hunt.html.erb
@@ -2,17 +2,31 @@
 
 <html>
   <head>
-
     <style type="text/css">
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
-      html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+    #map-canvas, #directions-panel {
+      height: 90%;
+    }
+
+    #map-canvas {
+      width: 60%;
+      position: absolute;
+      float: left;
+    }
+
+    #directions-panel {
+      width: 40%;
+      position: relative;
+      float: right;
+    }
     </style>
-    
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZJutoonZK2nW2NP65j6A-_JNvop8ndco&libraries=geometry"></script>
     <%= javascript_include_tag "new.js" %>
-
-
-    
   </head>
   <body>
       <div>Target 1 is SF, Target 2 is Richmond</div>
@@ -22,5 +36,6 @@
       <input id="Target 2" type="button" value="Target 2" onclick="changeTargetTwo();calcRoute();calcDistance();"/>
       <br/>
       <div id="map-canvas"></div>
+      <div id="directions-panel"></div>
   </body>
 </html>
