Fixed that thing

--- a/app/assets/templates/login-form.html.erb
+++ b/app/assets/templates/login-form.html.erb
@@ -1,4 +1,4 @@
-<form name="usersForm" data-ng-controller = "SessionController as session" style="margin-left: 3%;" data-ng-submit="session.login(username, password)" novalidate>
+<form name="usersForm" style="margin-left: 3%;" data-ng-submit="session.login(username, password)" novalidate>
 <div class="form">
   
       <div class="input-group" style="margin-bottom:1%">
