--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -39,7 +39,7 @@
 				            <li><a href="#">Log out</a></li>
 			        	</ul>
 			        	<li><a href="#login-form" data-ng-click="template=6" style="color: white">Log in</a></li>
-			        	<li><a href="#user-form" data-ng-click="template=5" style="color: white">Sign up now!</a></li>
+			        	<li><a href="#users-form" data-ng-click="template=5" style="color: white">Sign up now!</a></li>
 			    </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
