--- a/app/assets/templates/users-form.html.erb
+++ b/app/assets/templates/users-form.html.erb
@@ -1,4 +1,4 @@
-<form name="usersForm" data-ng-controller = "UsersController as user" style="margin-left: 3%;" data-ng-submit="user.addUser()" novalidate>
+<form name="usersForm" style="margin-left: 3%;" data-ng-submit="newUser.addUser()" novalidate>
 <div class="form">
   
       <div class="input-group" style="margin-bottom:1%">
@@ -8,7 +8,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none;">Username: </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="Username" data-ng-model="user.username" style="" required>
+              <input type="text" class="form-control" placeholder="Username" data-ng-model="newUser.username" style="" required>
             </td>
           </tr>
         </table>
@@ -20,7 +20,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Password:  </span>
             </td>
             <td width="200px;">
-              <input type="password" class="form-control" placeholder="Password" data-ng-model="user.password" style="" required>
+              <input type="password" class="form-control" placeholder="Password" data-ng-model="newUser.password" style="" required>
             </td>
           </tr>
         </table>
@@ -32,7 +32,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Real Name:  </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="Real Name" data-ng-model="user.realName" style="" required>
+              <input type="text" class="form-control" placeholder="Real Name" data-ng-model="newUser.realName" style="" required>
             </td>
           </tr>
         </table>
@@ -44,7 +44,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Available Hours:  </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="6pm-6am" data-ng-model="user.availableHours" style="" required>
+              <input type="text" class="form-control" placeholder="6pm-6am" data-ng-model="newUser.availableHours" style="" required>
             </td>
           </tr>
         </table>
@@ -56,7 +56,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Current City:  </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="Berkeley, California" data-ng-model="user.currentCity" style="" required>
+              <input type="text" class="form-control" placeholder="Berkeley, California" data-ng-model="newUser.currentCity" style="" required>
             </td>
           </tr>
         </table>
