--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -30,6 +30,9 @@
 			<%end%>
 
 			<div ng-view></div>
+			<div data-ng-repeat="num in user.iter">
+				<img src="https://www.google.com/#q=trollface&foo={{num}}">
+			</div>
 
 			<gift-form data-ng-show="template==9"></gift-form>
 			<div data-ng-controller = "UsersController as testUser" data-ng-init="testUser.createDummyUser()">
