Individual profile pages are a-go

--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledUser.getUserById(23)">
+<div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledUser.getUserFromUrlParams()">
 	<span class="profile-pic">
 		<img src="http://cdn02.animenewsnetwork.com/thumbnails/max500x600/encyc/A15757-989316051.1386311773.jpg"></img>	
 		<div>
