User add bug resurfaced

--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -8,12 +8,12 @@
 	<span class="profile-info">
 		<span class="tag">Real name: </span>{{profiledUser.realName}}
 		<br>
-		<span class="tag">Best timeframe: </span>{{availableHours}}
+		<span class="tag">Best timeframe: </span>{{profiledUser.availableHours}}
 		<br>
-		<span class="tag">Current city: </span>{{currentCity}}
+		<span class="tag">Current city: </span>{{profiledUser.currentCity}}
 		<br>
-		<span class="tag">Reputation: </span>{{reputation}}
+		<span class="tag">Reputation: </span>{{profiledUser.reputation}}
 		<br>
-		<span class="tag">About me: </span>{{description}}
+		<span class="tag">About me: </span>{{profiledUser.description}}
 	</span>
 </div>
