--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -20,7 +20,7 @@
 				Template: {{template}}
 			
 				<button data-ng-click="template=99" style="background-color:teal">Run Unit Tests</button>
-				<button data-ng-click="template=7" style="background-color:teal">Show Sample Profile</button>
+				<!-- <button data-ng-click="template=7" style="background-color:teal">Show Sample Profile</button> -->
 				<button data-ng-click="template=8" style="background-color:teal">Show Sample Gift</button>
 				<button data-ng-click="template=9" style="background-color:teal">Show Gift Form</button>
 
@@ -30,9 +30,9 @@
 			<%end%>
 
 			<div ng-view></div>
-			<div data-ng-repeat="num in user.iter">
+<!-- 			<div data-ng-repeat="num in user.iter">
 				<img src="https://www.google.com/#q=trollface&foo={{num}}">
-			</div>
+			</div> -->
 
 			<gift-form data-ng-show="template==9"></gift-form>
 			<div data-ng-controller = "UsersController as testUser" data-ng-init="testUser.createDummyUser()">
