--- a/app/assets/templates/users-form.html.erb
+++ b/app/assets/templates/users-form.html.erb
@@ -61,6 +61,19 @@
           </tr>
         </table>
       </div>
+      <div class="input-group" style="margin-bottom:1%">
+        <table width="100%">
+          <tr>
+            <td width="200px;">
+              <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Avatar URL:  </span>
+            </td>
+            <td width="200px;">
+              <input type="text" class="form-control" placeholder="trollface.jpg" data-ng-model="newUser.profileUrl" style="" required>
+            </td>
+          </tr>
+        </table>
+      </div>
+      Your avatar: <img style="width:100px; height:100px; margin-left:18%" src="{{newUser.profileUrl}}">
       <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Create Account</button>
 </div>
 </form>
