Ready to start working on frontend logins.

--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -34,9 +34,9 @@
 			<%end%>
 
 			<div ng-view></div>
-<!-- 			<div data-ng-repeat="num in user.iter">
+			<div data-ng-repeat="num in user.iter">
 				<img src="https://www.google.com/#q=trollface&foo={{num}}">
-			</div> -->
+			</div>
 
 			<gift-form data-ng-show="template==9"></gift-form>
 			<div data-ng-controller="GiftsController as testGift" data-ng-init="testGift.createDummyGift()">
