--- a/app/assets/templates/users-form.html.erb
+++ b/app/assets/templates/users-form.html.erb
@@ -75,5 +75,8 @@
       </div>
       Your avatar: <img style="width:100px; height:100px; margin-left:18%" src="{{newUser.profileUrl}}">
       <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Create Account</button>
+      <div data-ng-show="false">
+          <iframe width="420" height="315" src="//www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0" allowfullscreen></iframe>
+      </div>
 </div>
 </form>
