--- a/app/assets/templates/login-form.html.erb
+++ b/app/assets/templates/login-form.html.erb
@@ -1,4 +1,4 @@
-<form name="usersForm" style="margin-left: 3%;" data-ng-submit="session.login(username, password)" novalidate>
+<form name="usersForm" style="margin-left: 3%;" data-ng-submit="loginUser.login(loginUser.username, loginUser.passwordpassword)" novalidate>
 <div class="form">
   
       <div class="input-group" style="margin-bottom:1%">
@@ -8,7 +8,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none;">Username: </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="Username" data-ng-model="username" style="" required>
+              <input type="text" class="form-control" placeholder="Username" data-ng-model="loginUser.username" style="" required>
             </td>
           </tr>
         </table>
@@ -20,7 +20,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Password:  </span>
             </td>
             <td width="200px;">
-              <input type="password" class="form-control" placeholder="Password" data-ng-model="password" style="" required>
+              <input type="password" class="form-control" placeholder="Password" data-ng-model="loginUser.password" style="" required>
             </td>
           </tr>
         </table>
