Logins presumably work, but looking for ways to utilize token.

--- a/app/assets/templates/login-form.html.erb
+++ b/app/assets/templates/login-form.html.erb
@@ -1,4 +1,4 @@
-<form name="usersForm" style="margin-left: 3%;" data-ng-submit="loginUser.login(loginUser.username, loginUser.passwordpassword)" novalidate>
+<form name="usersForm" style="margin-left: 3%;" data-ng-submit="loginUser.login(loginUser.username, loginUser.password)" novalidate>
 <div class="form">
   
       <div class="input-group" style="margin-bottom:1%">
