Minor QoL changes

--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledUser.getUserFromUrlParams()">
 	<span class="profile-pic">
-		<img src="{{profiledUser.profileUrl}}"></img>	
+		<img style="height:200px; width:200px" src="{{profiledUser.profileUrl}}"></img>	
 		<div>
 			{{profiledUser.username}}
 		</div>
