--- a/app/assets/templates/gift-form.html.erb
+++ b/app/assets/templates/gift-form.html.erb
@@ -17,18 +17,6 @@
         <table width="100%">
           <tr>
             <td width="200px;">
-              <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Image URL:  </span>
-            </td>
-            <td width="200px;">
-              <input type="text" class="form-control" placeholder="inst.eecs.berkeley.edu/obrien.jpg" data-ng-model="gift.url" style="" required>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="input-group" style="margin-bottom:1%">
-        <table width="100%">
-          <tr>
-            <td width="200px;">
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Description:  </span>
             </td>
             <td width="200px;">
@@ -37,6 +25,19 @@
           </tr>
         </table>
       </div>
+      <div class="input-group" style="margin-bottom:1%">
+        <table width="100%">
+          <tr>
+            <td width="200px;">
+              <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Image URL:  </span>
+            </td>
+            <td width="200px;">
+              <input type="text" class="form-control" placeholder="trollface.jpg" data-ng-model="gift.imageUrl" style="" required>
+            </td>
+          </tr>
+        </table>
+      </div>
+      Your gift: <img style="width:100px; height:100px; margin-left:24%" src="{{gift.imageUrl}}">
       <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Create Gift</button>
 </div>
 </form>
