More QoL? Gifts need actual error codes

--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -20,7 +20,7 @@
 				<button data-ng-click="template=99" style="background-color:teal">Run Unit Tests</button>
 				<!-- <button data-ng-click="template=7" style="background-color:teal">Show Sample Profile</button> -->
 				<button data-ng-click="template=8" style="background-color:teal">Show Sample Gift</button>
-				<button data-ng-click="template=9" style="background-color:teal">Show Gift Form</button>
+				<button data-ng-click="template=9" style="background-color:teal"><a href="#gifts-form">Show Gift Form</a></button>
 
 				<users-tests data-ng-if="template==99"></users-tests>
 				<gifts-tests data-ng-if="template==99"></gifts-tests>
