--- a/app/assets/templates/gift-form.html.erb
+++ b/app/assets/templates/gift-form.html.erb
@@ -1,5 +1,5 @@
 <!--Still need to add something like data-ng-init="recipient=$parent.username."-->
-<form name="gifsForm" data-ng-controller = "GiftsController as gift" style="margin-left: 3%;" data-ng-submit="gift.addGift()" novalidate>
+<form name="gifsForm" style="margin-left: 3%;" data-ng-submit="newGift.addGift()" novalidate>
 <div class="form">
       <div class="input-group" style="margin-bottom:1%">
         <table width="100%">
@@ -8,7 +8,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none;">Gift name: </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="Gift name" data-ng-model="gift.name" style="" required>
+              <input type="text" class="form-control" placeholder="Gift name" data-ng-model="newGift.name" style="" required>
             </td>
           </tr>
         </table>
@@ -20,7 +20,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Description:  </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="Description" data-ng-model="gift.description" style="" required>
+              <input type="text" class="form-control" placeholder="Description" data-ng-model="newGift.description" style="" required>
             </td>
           </tr>
         </table>
@@ -32,12 +32,12 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Image URL:  </span>
             </td>
             <td width="200px;">
-              <input type="text" class="form-control" placeholder="trollface.jpg" data-ng-model="gift.imageUrl" style="" required>
+              <input type="text" class="form-control" placeholder="trollface.jpg" data-ng-model="newGift.imageUrl" style="" required>
             </td>
           </tr>
         </table>
       </div>
-      Your gift: <img style="width:100px; height:100px; margin-left:24%" src="{{gift.imageUrl}}">
+      Your gift: <img style="width:100px; height:100px; margin-left:24%" src="{{newGift.imageUrl}}">
       <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Create Gift</button>
 </div>
 </form>
