Probably finished setup for iter3

--- a/app/assets/templates/gift.html.erb
+++ b/app/assets/templates/gift.html.erb
@@ -1,18 +1,18 @@
-<div class="container-fluid" style="margin-top:-.2%">
+<div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledGift.createDummyGift()">
 	<span class="profile-pic">
-		<img src="http://i1290.photobucket.com/albums/b531/orangepikmin333/shittypaintjob_zpscbf470a8.jpg"/>
+		<img style="height:200px; width:200px" src="{{profiledGift.imageUrl}}"/>
 		<div>
-			{{name}}
+			{{profiledGift.name}}
 		</div>
 	</span>
 	<span class="profile-info">
-		<span class="tag">Giver: </span>{{giver}}
+		<span class="tag">Giver: </span>{{profiledGift.giver}}
 		<br>
-		<span class="tag">Recipient: </span>{{recipient}}
+		<span class="tag">Recipient: </span>{{profiledGift.recipient}}
 		<br>
-		<span class="tag">Rating: </span>{{rating}}/5
+		<span class="tag">Rating: </span>{{profiledGift.rating}}/5
 		<br>
-		<span class="tag">Description: </span>{{description}}
+		<span class="tag">Description: </span>{{profiledGift.description}}
 		<br>
 	</span>
 </div>
