--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -9,7 +9,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 		      	</button>
-		      <a class="navbar-brand" href="#" data-ng-click="template=0" style="color: white;">Generosity Engine</a>
+		      <a class="navbar-brand" href="#" data-ng-click="template=0" style="color: white;">Prank Engine</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
