Added consistency, support for dummy objects.

--- a/app/assets/templates/gift.html.erb
+++ b/app/assets/templates/gift.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledGift.createDummyGift()">
+<div class="container-fluid" style="margin-top:-.2%" data-ng-init="profiledGift.getGiftFromUrlParams()">
 	<span class="profile-pic">
 		<img style="height:200px; width:200px" src="{{profiledGift.imageUrl}}"/>
 		<div>
