--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -18,8 +18,8 @@
 				Template: {{template}}
 			
 				<button data-ng-click="template=99" style="background-color:teal">Run Unit Tests</button>
-				<!-- <button data-ng-click="template=7" style="background-color:teal">Show Sample Profile</button> -->
-				<button data-ng-click="template=8" style="background-color:teal"><a href="#gift/1">Show Sample Gift</a></button>
+				<button data-ng-click="template=7" style="background-color:teal"><a href="#profile/0">Show Sample Profile</a></button>
+				<button data-ng-click="template=8" style="background-color:teal"><a href="#gift/0">Show Sample Gift</a></button>
 				<button data-ng-click="template=9" style="background-color:teal"><a href="#gifts-form">Show Gift Form</a></button>
 
 				<users-tests data-ng-if="template==99"></users-tests>
