More icing on the cake

--- a/app/assets/templates/index.html.erb
+++ b/app/assets/templates/index.html.erb
@@ -7,23 +7,35 @@
 
 	<% if Rails.env == "development" %>
 		<p>Tasks for the current iteration: </p>
-		<br>
+
 		<p>Backend:</p>
 		<li>Set up deletion methods (both single and all) for all models.</li>
 		<li>Add error codes to gifts and challenges.</li>
 		<br>
+
 		<p>Frontend:</p>
 		<li>Get cookies to work.</li>
 		<li>Set up the rest of the frontend tests.</li>
 		<li>Make the remaining partials (gifts list, etc.)</li>
 		<br>
+
 		<p>General:</p>
 		<li>Phonegap.</li>
 		<br>
+
 		<p>Grab bag for whoever's free:</p>
 		<li>Set up frontend challenges controller (whoever knows exactly what challenges are meant to be).</li>
+		<br>
+
+		<br>
+		<p>Resources:</p>
+		<li><a href="https://still-plains-1604.herokuapp.com/#/">Deployed</a></li>
+		<li><a href="https://github.com/conwaychriscosmo/Generosity/tree/iter2">Repo</a></li>
+		<li><a href="https://docs.google.com/a/berkeley.edu/document/d/1nraxGbZLVMmfpMK-VHE9Brqcg1o3g856rTrs3YVD1JI/edit">Requirements and Specs</a></li>
+		<li><a href="https://docs.google.com/a/berkeley.edu/document/d/1MTV1nptHi6riUTn1rRVfRnAvVBfpeGe80fPJdfVCQ5I/edit?pli=1">Design and Planning</a></li>
+		<li><a href="https://www.pivotaltracker.com/s/projects/1181760">Pivotal Tracker</a></li>
+
 	<%end%>
 
-	<br><br><br><br>
-	<p>Current version: 0.2.1 (Iteration 3 started)</p>
+	<br><br>
 </div>
