--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -10,7 +10,7 @@
 
 	</head>
 
-	<body data-ng-app = 'generosity' data-ng-controller = "UsersController as user" data-ng-init="template=0">
+	<body data-ng-app = 'generosity' data-ng-controller = "UsersController as user" data-ng-init="user.getUserFromCookie(); template=0">
 		<navbar></navbar>
 		<div class="main-content">
 
