--- a/app/assets/templates/index.html.erb
+++ b/app/assets/templates/index.html.erb
@@ -1,8 +1,7 @@
 <div class="container-fluid" style="margin-top:-.2%">
 	<h1>This is our front page!</h1>
 	<br>
-	<p>The formating is at the moment tentative, but we will probably use this page
-		to give an overview of the app, as well as post updates and in development 
+	<p>The formating is at the moment tentative, but we will probably use this page to give an overview of the app, as well as post updates and in development 
 		list tasks for the current iteration.</p>
 
 	<% if Rails.env == "development" %>
@@ -14,7 +13,7 @@
 		<br>
 
 		<p>Frontend:</p>
-		<li>Get cookies to work.</li>
+		<li>Get cookies to work. [DONE]</li>
 		<li>Set up the rest of the frontend tests.</li>
 		<li>Make the remaining partials (gifts list, etc.)</li>
 		<br>
