Lord Christopher is now #-13 in order to keep normal users from accidentally finding him.

--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -41,7 +41,7 @@
 			        	<li data-ng-hide="id"><a href="#login-form" data-ng-click="template=6" style="color: white">Log in</a></li>
 			        	<li data-ng-hide="id"><a style="color: white"> | </a></li>
 			        	<li data-ng-hide="id"><a href="#users-form" data-ng-click="template=5" style="color: white">Sign up now!</a></li>
-			        	<li data-ng-show="id"><a href="#profile/{{user.id}}" data-ng-click="template=1" style="color: white">Welcome, {{username}}.</a></li>
+			        	<li data-ng-show="id"><a href="#profile/{{id}}" data-ng-click="template=1" style="color: white">Welcome, {{username}}.</a></li>
 			        	<li data-ng-show="id"><a style="color: white"> | </a></li>
 			        	<li data-ng-show="id"><a href="#" style="color: white" data-ng-click="user.logout()">Logout</a></li>
 			    </ul>
