--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -29,8 +29,16 @@ body{
 .input-group-addon{
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
-  line-height: 18px;
-  font-weight: bold;
+	line-height: 18px;
+	font-weight: bold;
+}
+
+.error{
+	color: red;
+	font-size: 12px;
+	font-family: Arial, Helvetica, sans-serif;
+    line-height: 18px;
+    font-weight: bold;
 }
 
 .tag {
