--- a/app/assets/templates/users-form.html.erb
+++ b/app/assets/templates/users-form.html.erb
@@ -74,6 +74,9 @@
         </table>
       </div>
       Your avatar: <img style="width:100px; height:100px; margin-left:18%" src="{{newUser.profileUrl}}">
+
+      <div class="error">{{message}}</div>
+
       <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Create Account</button>
 </div>
 </form>
