--- a/app/assets/templates/login-form.html.erb
+++ b/app/assets/templates/login-form.html.erb
@@ -25,6 +25,7 @@
           </tr>
         </table>
       </div>
+      <div class="error">{{message}}</div>
       <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Log in</button>
 </div>
 </form>
