Navbar should (?) properly update on logout.

--- a/app/assets/templates/gift-form.html.erb
+++ b/app/assets/templates/gift-form.html.erb
@@ -38,6 +38,7 @@
         </table>
       </div>
       Your gift: <img style="width:100px; height:100px; margin-left:24%" src="{{newGift.imageUrl}}">
+      <div class="error">{{message}}</div>
       <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Create Gift</button>
 </div>
 </form>
