--- a/app/assets/templates/index.html.erb
+++ b/app/assets/templates/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid" style="margin-top:-.2%">
 	<h1>This is our front page!</h1>
-	<h1>IMPORTANT: While messing around with the app, do look out for oddities such as...THE PAGE PERIODICALLY REFRESHING ON ITS OWN. I have been having such an issue, and I am out of ideas as to why it could be happening.</h1>
-	<br>
-	<p>The formating is at the moment tentative, but we will probably use this page to give an overview of the app, as well as post updates and in development 
-		list tasks for the current iteration.</p>
 
 	<% if Rails.env == "development" %>
+		<h1>IMPORTANT: While messing around with the app, do look out for oddities such as...THE PAGE PERIODICALLY REFRESHING ON ITS OWN. I have been having such an issue, and I am out of ideas as to why it could be happening.</h1>
+		<br>
+		<p>The formating is at the moment tentative, but we will probably use this page to give an overview of the app, as well as post updates and in development list tasks for the current iteration.</p>
+
 		<p>Tasks for the current iteration: </p>
 
 		<p>Backend:</p>
@@ -25,6 +25,7 @@
 
 		<p>Grab bag for whoever's free:</p>
 		<li>Set up frontend challenges controller (whoever knows exactly what challenges are meant to be).</li>
+		<li>Figure out the issues with the page automatically refreshing/redirecting to default.</li>
 		<br>
 
 		<br>
