Edit user page created.

--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -15,5 +15,7 @@
 		<span class="tag">Reputation: </span>{{profiledUser.reputation}}
 		<br>
 		<span class="tag">About me: </span>{{profiledUser.description}}
+		<br>
+		<a href="#edit-user">Edit Details</a>
 	</span>
 </div>
