--- a/app/assets/templates/edit-users-form.html.erb
+++ b/app/assets/templates/edit-users-form.html.erb
@@ -64,6 +64,6 @@
 
       <div class="error">{{message}}</div>
 
-      <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Edit Info</button>
+      <button class="btn btn-default" style="margin-left:170px;margin-top:30px;">Submit</button>
 </div>
 </form>
