--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -18,9 +18,9 @@
 				Template: {{template}}
 			
 				<button data-ng-click="template=99" style="background-color:teal">Run Unit Tests</button>
-				<button data-ng-click="template=7" style="background-color:teal"><a href="#profile/-13">Show Sample Profile</a></button>
-				<button data-ng-click="template=8" style="background-color:teal"><a href="#gift/0">Show Sample Gift</a></button>
-				<button data-ng-click="template=9" style="background-color:teal"><a href="#gifts-form">Show Gift Form</a></button>
+				<a href="#profile/-13" data-ng-click="template=7"><button style="background-color:teal; color:white">Show Sample Profile</button></a>
+				<a href="#gift/0" data-ng-click="template=8"><button style="background-color:teal; color:white">Show Sample Gift</button></a>
+				<a href="#gifts-form" data-ng-click="template=9"><button style="background-color:teal; color:white">Show Gift Form</button></a>
 
 				<users-tests data-ng-if="template==99"></users-tests>
 				<gifts-tests data-ng-if="template==99"></gifts-tests>
